--- a/sparkles-hello-world/umbrel-app.yml
+++ b/sparkles-hello-world/umbrel-app.yml
@@ -2,9 +2,9 @@ manifestVersion: 1
 id: sparkles-hello-world
 name: Hello World
 tagline: Replace this tagline with your app's tagline
-icon: https://svgur.com/i/mvA.svg
+icon: https://www.gravatar.com/avatar/39ce7371579cda957c8c2cecd7a2f7aa?s=120&r=g&d=404
 category: Development
-version: "1.0.0"
+version: "0.8.1"
 port: 4000
 description: >-
   Add your app's description here.
@@ -12,9 +12,9 @@ description: >-
 
   You can also add newlines!
 
-developer: Umbrel
+developer: honeygain
 website: https://umbrel.com
-submitter: Umbrel
+submitter: XPXWORD
 submission: https://github.com/getumbrel/umbrel-hello-world-app
 repo: https://github.com/getumbrel/umbrel-hello-world-app
 support: https://github.com/getumbrel/umbrel-hello-world-app/issues
